Core features done - Drag & drop split functionality complete - Containers disappear ("merge" with sibling) when last view is closed TODO : - Clean the code, optimize & add some comments - Add as many configuration options as possible - Heavy testing with various content inside views - Expose some API method and events - Set up example pages

--- a/css/ui-dock-test.css
+++ b/css/ui-dock-test.css
@@ -6,7 +6,7 @@ body {
   display:none;
 }
 
-#ui-dock-test {
+#ui-dock-test, #ui-dock-test>.ui-dock-container {
   height: 400px;
-  border: 2px solid #DDD;
 }
+
